--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,5 @@
-/*body{
-    background-color: #1C202C;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: monospace;
-}
-.calculadora{
-    background-color: #1E1C1C;
-    border: .12rem solid transparent;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    display: inline-block;
-    padding: 1rem;
-    box-shadow: 0px 4px 17px 3px rgba(0,0,0,0.36);
-}
-
-.calculadora__display{
-    color: white;
-    width: 170px;
-    word-wrap: break-word;
-    min-height: 3rem;
-    font-size: 18px;
-    padding: 6px;
-    margin: 0;
-    border-bottom: 1px solid #777779;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-.calculadora__button-group{
-    margin-top: .6rem;
-    display: grid;
-    grid-template-rows: repeat(5,37.11px);
-    grid-template-columns: repeat(4,1fr);
-    gap: .7rem;
-}
-.but{
-    background: #505154;
-    border: 1px solid transparent;
-    box-sizing: border-box;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    font-size: 1.1rem;
-}
-#borrar{
-    color: #DA1B1B;
-}
-#operador, #porcentaje, #parentesis{
-    color: #19CA0A;
-}
-.igual{
-    background: #19CA0A;
-    color: black;
-}
-*/
-
 body{
     background-color: #1C202C;
-    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,18 +20,22 @@ body{
 }
 
 .calculadora__display{
-    width: 300px;
+    width: 320px;
     text-align: right;
 }
 #history-calculator{
-    margin: .2rem;
+    min-height: 23px;
+}
+#history-text{
+    margin: 0;
+    padding: 0;
     font-size: 1.2rem;
     font-weight: bold;
     opacity: .4;
 }
 #value-current{
     margin: .3rem;
-    min-height: 2rem;
+    min-height: 2.4rem;
 }    
 #text-current{
     margin: 0;
@@ -110,9 +47,9 @@ body{
 .calculadora__teclado{
     margin-top: .6rem;
     display: grid;
-    grid-template-rows: repeat(5,50px);
-    grid-template-columns: repeat(4,50px);
-    gap: 2rem;
+    grid-template-rows: repeat(5,60px);
+    grid-template-columns: repeat(4,60px);
+    gap: 1.7rem;
 }
 .boton{
     font-family: monospace;
